modified:   src/html/index.html 	modified:   src/scripts/script.js 	modified:   src/styles/desktop/footerSection.css 	modified:   src/styles/desktop/headerSection.css 	modified:   src/styles/mobile/headerSection.css

--- a/src/styles/desktop/footerSection.css
+++ b/src/styles/desktop/footerSection.css
@@ -30,9 +30,19 @@
 }
 
 .footer-bts>img:hover {
-    cursor: pointer;
+    /* cursor: pointer;
     transform: scale(1.25);
-    transition-duration: 0.2s;
+    transition-duration: 0.2s; */
+
+    animation: footerIconsHover 0.2s infinite;
+}
+
+@keyframes footerIconsHover {
+    0%,
+    100% {
+        cursor: pointer;
+        transform: scale(1.25);
+    }
 }
 
 .footer-logo {
