--- a/src/styles/desktop/headerSection.css
+++ b/src/styles/desktop/headerSection.css
@@ -30,15 +30,19 @@
     line-height: 19px;
 
     color: #4F5665;
-    padding-bottom: 5px;
-    border-bottom: 1px solid transparent;
-    transition-duration: 0.2s;
 }
 
 .header-nav>nav>a:hover {
-    border-bottom: 2px solid #F53855;
-    padding-bottom: 10px;
-    transition-duration: 0.1s;
+    animation: linksBorderHover 0.2s infinite;
+}
+
+@keyframes linksBorderHover {
+
+    0%,
+    100% {
+        border-bottom: 2px solid #F53855;
+        padding-bottom: 10px;
+    }
 }
 
 /* buttons */
@@ -69,10 +73,16 @@
 
 .link-signin:hover,
 .link-signup:hover {
-    color: #F53855;
-    border: 1px solid #F53855;
+    animation: headerBtnsHover 0.2s infinite 0.05s;
+}
 
-    transition-duration: 0.2s;
+@keyframes headerBtnsHover {
+
+    0%,
+    100% {
+        color: #F53855;
+        border: 1px solid #F53855;
+    }
 }
 
 .burger-menu {
