--- a/src/styles/mobile/headerSection.css
+++ b/src/styles/mobile/headerSection.css
@@ -14,49 +14,23 @@
     display: none;
 }
 
-/* .burger-menu-wrapper {
-
-}
-
 .burger-menu {
-    
-} */
-
-.burger-menu>p {
-    font-size: x-large;
-    font-weight: 900;
-    line-height: 0px;
+    margin-top: 5px;
     transform: rotateZ(90deg);
 }
 
+.menu-links {
+    width: 100%;  
+    text-decoration: none;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    /* background-color: rgb(209, 209, 209); */
+}
+
 .openBurgerMenu {
-    /* min-height: 100px; */
+    margin-top: 10px;
     display: flex;
     flex-direction: column;
     text-align: center;
-    background-color: #F6F6F6;
-}
-
-.menu-links {
-    text-decoration: none;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font-family: 'Rubik';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 19px;
-    color: #4F5665;
-
-    animation: showText 0.3s linear;
-}
-
-@keyframes showText {
-    0%, 90% {
-        opacity: 0;
-    }
-
-    91%, 100% {
-        opacity: 1;
-    }
+    margin-bottom: 40px;
 }
